@@ -2,6 +2,9 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 
+2011-09-08	remko
+	* ps2raster_func.c:	Add -TE option to include /PageSize in EPS.
+
 2011-08-30	jluis
 	* gmt_plot.h:		More Voodoo. If the "char string[GMT_TEXT_LEN64];" 
 				is not the first member in the GMT_SYMBOL struct than 
